fix: width-change-popup invisible problem

--- a/src/style.css
+++ b/src/style.css
@@ -56,8 +56,6 @@
     align-items: center;
     width: 24px;
     height: 24px;
-    user-select: none;
-    -webkit-user-select: none;
   }
 
   .footerbar-content {
@@ -66,14 +64,10 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    /* user-select: none; */
-    /* -webkit-user-select: none; */
   }
 
   .footerbar {
     filter: brightness(0.95);
-    /* background-color: var(--background-color); */
-    /* border-top: var(--header-color) 2px solid; */
     font-size: 12px;
   }
 
@@ -87,7 +81,6 @@
     border-radius: 4px;
     position: fixed;
     transform: translateX(-50%);
-    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
   }
 
   .delete-icon {
